# minc-visual

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake-modules/: BuildCoin.cmake  BuildITK-SNAP.cmake  BuildQT.cmake  BuildQuarter.cmake  BuildVTK.cmake  DebianPackageAddons.cmake
